--- a/Task4/src/application.properties
+++ b/Task4/src/application.properties
@@ -1,3 +1,3 @@
-database.url=sql
+database.url=jdbc:mysql://localhost:3306/VehicleSystem
 database.username=root
-database.password=1234
+database.password=Menna123#
